Fix the answer screen and workspace screen spacing

--- a/style.css
+++ b/style.css
@@ -19,6 +19,12 @@ body{
     width: 35vh;
   
 }
+.answer{
+    height:2vh;
+}
+.workingSpace{
+    height:3vh;
+}
 .calcButtons{
    
     border: 2px solid black;
